fix: alignment for top up and tradee button

--- a/packages/cfd/src/sass/cfd-dashboard.scss
+++ b/packages/cfd/src/sass/cfd-dashboard.scss
@@ -1060,10 +1060,10 @@
         padding: 0.2rem 0.8rem 0;
 
         .dc-btn {
-            min-width: 50%;
+            min-width: 48%;
             height: 4rem;
             width: 100%;
-            margin: 0 0 0.8rem -0.2rem;
+            margin: 0 0 0.8rem;
 
             &:not(:last-child) {
                 margin-right: 0.6rem;
